<resources>
    <string name="app_name">Views</string>
    <string name="pieview">PieView</string>
    <string name="checkview">CheckView</string>
    <string name="check">Check</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="stepview">QQStepView</string>
    <string name="letterslidebar">LetterSlideBar</string>
    <string name="loading">正在加载...</string>
    <string name="collect">收藏文章</string>
</resources>
