<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:elevation="10dp"
    tools:context=".fragment.PieViewFragment">

    <ImageButton
        android:id="@+id/but_close"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorGrey"
        android:src="@drawable/ic_down"
        android:contentDescription="@string/todo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/check_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/checkview"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/colorTransBlack" />

    <com.laughter.views.views.CheckView
        android:id="@+id/check_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/but_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:minHeight="0dp"
        android:text="@string/check"
        android:textSize="20sp"
        android:textAllCaps="false" />

</RelativeLayout>